kubernetes/Ingress/webservice1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web1
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
      - name: web1
        image: alicek106/rr-test:echo-hostname
        ports:
        - containerPort: 80
