kubernetes/Ingress/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  ports:
  - name: service-port
    port: 8080
    targetPort: 80
  selector:
    app: web1
  type: ClusterIP
