kubernetes/Ingress/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
  - name: service-port
    port: 9090
    targetPort: 80
  selector:
    app: web2
  type: ClusterIP
