kubernetes/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:          # 인그레스의 추가적인 기능을 사용
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.test.com
    http:
      paths:
      - pathType: Prefix
        path: /myserver
        backend:
          service:
            name: service1
            port:
              number: 8080
      - pathType: Prefix
        path: /yourserver
        backend:
          service:
            name: service2
            port:
              number: 9090
